--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div>
+    <div class="campo">
         <h1 id="titulo">Cadastro DEV</h1>
         <p id="subtitulo">Complete suas informações</p>
         <br>
@@ -15,23 +16,23 @@
 
     <form>
         <fieldset class="grupo">
-            <div>
+            <div class="campo">
                 <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome">
+                <input type="text" name="nome" id="nome" required>
             </div>
 
-            <div>
+            <div class="campo">
                 <label for="sobrenome">Sobrenome</label>
-                <input type="text" name="sobrenome" id="sobrenome">
+                <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
         </fieldset>
 
-        <div>
+        <div class="campo">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" required>
         </div>
 
-        <div>
+        <div class="campo">
             <label>De qual lado da aplicação você desenvolve?</label>
             <label>
                 <input type="radio" name="devweb" value="frontend" checked>Front-end
@@ -44,8 +45,8 @@
             </label>
         </div>
 
-        <div>
-            <label>Senioridade</label>
+        <div class="campo">
+            <label for="senioridade">Senioridade</label>
             <select id="senioridade">
                 <option selected disabled value="">Selecione:</option>
                 <option>Junior</option>
@@ -55,7 +56,7 @@
         </div>
 
         <fieldset class="grupo">
-            <div>
+            <div id="check">
                 <label>Selecione as tecnologias que utiliza</label><br><br>
                 <input type="checkbox" name="tecnologia1" id="tecnologia1" value="HTML">
                 <label for="tecnologia1">HTML</label>
@@ -74,13 +75,13 @@
             </div>
         </fieldset>
 
-        <div>
+        <div class="campo">
             <br>
             <label>Fale um pouco da sua experiência</label>
             <textarea name="experiencia" id="experiencia" rows="6" style="width: 26em;"></textarea>
         </div>
 
-        <button type="submit">Concluído</button>
+        <button class="botao"type="submit">Concluído</button>
     </form>
     
 </body>
